--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Merhaba Şanzimet! Bu Benim Yeni Sitem.</h1>
-    <p>İçeriği bu dosyada düzenleyerek sitenizi geliştirebilirsiniz.</p>
+    <p>Siber şanzimet çarpan at çabuk le</p>
 </body>
 </html>
