--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Şanzimet</title>
-</head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NW9XJX7E8V"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-NW9XJX7E8V');
+    </script>
+    
+    <title>Merhaba şanzimet Çene bol mu yine?</title>
+    </head>
 <body>
-    <h1>Merhaba Şanzimet! Bu Benim Yeni Sitem.</h1>
-    <p>Siber şanzimet çarpan at çabuk le</p>
-</body>
+    </body>
 </html>
