--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       gtag('config', 'G-NW9XJX7E8V');
     </script>
     
-    <title>Merhaba şanzimet Çene bol mu yine?</title>
+    <title>Merhaba ganene ne di oyon</title>
     </head>
 <body>
     </body>
