--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NW9XJX7E8V"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'G-NW9XJX7E8V');
-    </script>
-    
-    <title>Merhaba ganene ne di oyon</title>
-    </head>
-<body>
-    </body>
-</html>
+<html><head><title>ŞANZİMET HABER</title>
+    </head> 
+    <body>
+        <H1>En iyi şanzimet çeneleri burda!</H1>
+        <H1>Şanzimet Haber News
+        </H1>
+        <h2>Bol çeneli şanzimet hediye 1 alana 1 de ekstra çene paketi</h2>
+        <p>Son zamanlarda artan şanzimetin çenesi paketine zam mı gelecek? son günlerde merak konusu olan bu konuya bir açıklama henüz gelmedi ancak içerdeki kişiler şanzimet ailesinin çene yapmasına ekstra vergi alınacağı söylüyor </p>
+    <br>
+    <br>
+    <h1>ŞANZİMET AİLESİ KONUSU GELEN YENİ VERGİLERE GÖRE FAZLA GÜRÜLTÜCÜ TEYYİP PARTİSİNE OY VERMEYİ Mİ DÜŞÜNÜYOR?</h1><a href="">Şanzimet Haber Hız'ın adresi!
+    </a>
+<img src="Şanzimet.png" width="500" alt=""></body>
+    </html>
