--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>UMAY URAS</title>
+<title>PENCİ ZORNO İSO DAĞITIM</title>
 </head>
 <body>
 
-<h1>Hoşgeldin umay uras</h1>
-<p>Samsundan gaziantepe çoook yol var.</p>
-<p>:D</p>
+<h1>Hoşgeldin</h1>
+<p>OS dağıtımları için iso </p>
+<p>(riyal)</p>
