--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>PENCİ ZORNO İSO DAĞITIM</title>
+<title>FATİH AMBALAJ</title>
 </head>
 <body>
 
 <h1>Hoşgeldin</h1>
-<p>OS dağıtımları için iso </p>
-<p>(riyal)</p>
+<p>Ambalaj dükkanı</p>
+<p>Gaziantep</p>
