--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
+OCTYPE html>
+
 <html>
+
 <head>
+
 <title>FATİH AMBALAJ</title>
+
 </head>
+
 <body>
 
+
+
 <h1>Fatih Ambalaja Hoşgeldin</h1>
+
 <p>Ambalaj dükkanı</p>
+
 <p>Gaziantep</p>
+
+
+
+<img src="unnamed.jpg" alt="Fatih Ambalaj Logo" width="300">
+
+
+
+</body>
+
+</html>
